chore: :sparkles: iniciando conexão com banco de dados e arquitetando estrutura do projeto

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Enumerables\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Querys\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
