--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,7 +8,6 @@
     <Folder Include="Models\" />
     <Folder Include="Commands\" />
     <Folder Include="Enumerables\" />
-    <Folder Include="Helpers\" />
     <Folder Include="Querys\" />
     <Folder Include="Services\" />
   </ItemGroup>
