--- a/Infra/Infra.csproj
+++ b/Infra/Infra.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.28" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Scripts\" />
+  </ItemGroup>
+
 </Project>
