--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<ProjectReference Include="..\Cross.Cutting.IoC\Cross.Cutting.IoC.csproj" />
+	<ProjectReference Include="..\Cross.Cutting\Cross.Cutting.csproj" />
+	<ProjectReference Include="..\Domain\Domain.csproj" />
+	<ProjectReference Include="..\Infra\Infra.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="dbup-mysql" Version="4.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
