fix: :hammer: atualização do modelo de produtos e remoção de unidade de medida

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Interfaces\Repositories\IMeansurementRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Exports\Excel\Template\template.xlsx" />
   </ItemGroup>
 
