fix: excluir connection string

--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Connection": "Server=177.92.108.170;Database=db_tcc;Uid=db_tcc;Password=@@Kw88dby6"
+    "Connection": "Server=;Database=db_tcc;Uid=;Password="
   },
   "TokenConfiguration": {
     "Audience": "TCC.API",
