chore: :hammer: alterando projeto para utilizar variaveis de ambiente e não utilizar connection string do appsettings

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,10 @@ __pycache__/
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 **/.history
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
